k8s/microservices/templates/ingress/payments-webhook.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ms-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-ms
                port:
                  number: 3000
